# fastapi_git_p8

./: .gitignore  README.md  abdurashid.txt  commands.txt  group1.py  nuriddin.txt  ozoda.txt  pyproject.toml  zayniddin.txt
task/: grouop3.xml  group1.json  group1.py  group1.yaml  group2.json  group2.py  group2.xml  group2.yaml  group3.json  group3.py  group3.yaml  group4.json  group4.py  group4.xml  group4.yaml  group5.json  group5.py  group5.xml  group5.yaml  group6.py  regions.csv
